--- a/aviron-spa/package.json
+++ b/aviron-spa/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.3.1",
     "graphql": "^14.6.0",
     "moment": "^2.22.2",
+    "nookies": "^2.0.8",
     "prop-types": "^15.6.2",
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.14",
